# esp32

./: .gitignore
main/: CMakeLists.txt  Kconfig.projbuild  application.cpp  main.cpp
main/boards/common/: board.cpp
main/boards/s3_devkitc1/: config.hpp  s3_devkitc1.cpp
main/devices/: spi.cpp
main/include/: application.hpp  board.hpp  device.hpp  display.hpp  iic.hpp  spi.hpp
